# ludwig-rs

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
docs/: pattern-matcher.md
src/: app.rs  cell_buffer.rs  cmd_result.rs  code.rs  compiler.rs  edit_mode.rs  editor.rs  exec_context.rs  frame.rs  frame_set.rs  interpreter.rs  keybind.rs  lead_param.rs  lib.rs  main.rs  mark.rs  marks.rs  parse_cmd.rs  position.rs  screen.rs  span.rs  terminal.rs  trail_param.rs  viewport.rs
src/frame/: edit.rs  motion.rs  predicate.rs  search.rs  tests.rs  word.rs
src/pattern/: ast.rs  char_class.rs  matcher.rs  mod.rs  parser.rs
